[package]
name = "tonic-build"
version = "0.1.0-alpha.6"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic/0.1.0-alpha.5/tonic/"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = """
Codegen module of `tonic` gRPC implementation.
"""
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]


[dependencies]
prost-build = "0.5"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

# TODO FlatBuffers: Merge the changes then fix this
butte = { path = "../../magnet-butte/butte", optional = true }

[features]
default = ["transport", "rustfmt", "flatbuffers"]
flatbuffers = ["butte"]
rustfmt = []
transport = []

[package.metadata.docs.rs]
all-features = true
